<resources>
    <string name="app_name">BooksideUVG</string>
    <string name="mainactivitytitle">BookSideUvg</string>
    <string name="loginemailuser">Correo eléctronico</string>
    <string name="loginpassworduser">Contraseña</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="Signup">Registrarte</string>
    <string name="signupemailuser">Ingrese su correo eléctronico</string>
    <string name="signuppassworduser">Ingrese su contraseña</string>
    <string name="signuppassworduserreforced">Repita su contraseña</string>
    <string name="signupfirstnameuser">Ingrese su primer nombre</string>
    <string name="signupsecondnameuser">Ingrese su primer apellido</string>
    <string name="DrawerOpen">Drawer Open</string>
    <string name="DrawerClose">Drawer Close</string>
    <string name="book1">Título: Psicológicamente hablando: Un recorrido por las maravillas de la mente</string>
    <string name="book2">Título: Historia de dos ciudades</string>
    <string name="book3">Título: Guerra y Paz</string>
    <string name="book4">Título: La insoportable levedad del ser</string>
    <string name="book5">Título: El viaje a la felicidad: Las nuevas claves cientificas</string>
    <string name="book6">Título: En busca del tiempo perdido</string>
    <string name="book7">Título: Don Quijote de la Mancha</string>
    <string name="book8">Título: Cien años de soledad</string>
    <string name="book9">Título: Inteligencia Emocional</string>
    <string name="book10">Título: El guardián entre el centeno</string>
    <string name="autor1">Autor: Adrián Triglia, Bertrand Regader, Jonathan García-Allen</string>
    <string name="autor2">Autor: Charles Dickens</string>
    <string name="autor3">Autor: León Tolstói</string>
    <string name="autor4">Autor: Milan Kudera</string>
    <string name="autor5">Autor: Eduard Punset</string>
    <string name="autor6">Autor: Marcel Proust</string>
    <string name="autor7">Autor: Miguel de Cervantes</string>
    <string name="autor8">Autor: Gabriel García Márquez</string>
    <string name="autor9">Autor: Daniel Goleman</string>
    <string name="autor10">Autor: J. D. Salinger</string>
    <string name="Desc1">Descripción: En sus páginas se resuelven dudas frecuentes en torno a la psicología, además de repasar múltiples curiosidades sobre el funcionamiento de nuestro cerebro. Descubrirás la historia de la psicología, desde Wundt hasta nuestros días, pasando por Sigmund Freud, Erich Fromm y B. F. Skinner, entre muchos otros. Todo el conocimiento necesario para que te sumerjas en el fascinante mundo de la psicología, en 300 páginas llenas de conocimientos y creatividad.</string>
    <string name="Desc2">Descripción: Esta novela del escritor británico Charles Dickens ha vendido más de 200 millones de copias. La novela se sitúa en la época de la Revolución Francesa, entre dos ciudades: Londres y París. El autor es muy crítico con las instituciones del victorianismo, aunque la novela se aleja de cualquier debate político o filosófico sobre la revolución debido a la indiferencia y el desprecio hacia los políticos por parte del autor.</string>
    <string name="Desc3">Descripción: Esta novela del escritor ruso León Tolstói es un clásico de la literatura universal. Su texto narra las vidas de los miembros de distintas familias aristocráticas de la Rusia de entre 1805 y 1815, en el momento de las guerras napoleónicas. Alterna la descripción de dichas vidas con batallas como las de Austerlitz.</string>
    <string name="Desc4">Descripción: La insoportable levedad del ser, de Milan Kundera, es una historia de amor, traiciones, celos y paradojas de la vida diaria de las parejas. Esta apasionante novela está tan bien explicada que el lector se acabará sintiendo parte de la historia. Un libro altamente recomendable.</string>
    <string name="Desc5">Descripción: La búsqueda de la felicidad es una de las grandes aventuras del ser humano, pero también puede convertirse en una gran obsesión. Este libro es una recopilación de la evidencia científica respecto a esta temática, de la mano del divulgador científico Eduard Punset. No te lo puedes perder.</string>
    <string name="Desc6">Descripción: Todo un clásico esta obra de Marcel Proust. Posiblemente lo más interesante de esta novela no es la historia que explica, sino cómo lo hace el autor. Un auténtico maestro que es capaz de enganchar al lector, pues éste se siente reflejado y atrapado en la lectura.</string>
    <string name="Desc7">Descripción: Pocos no han escuchado hablar de Don Quijote de la Mancha, la famosa obra de Miguel de Cervantes. Una novela que trata de Don Quijote de la Mancha, un simple vecino de La Mancha que por leer muchos libros de caballería, tiene la idea (aunque para los demás está loco) de hacerse caballero andante junto un paisano suyo llamado Sancho Panza (que hace de escudero). Ambos viven miles de aventuras que suelen salir mal.</string>
    <string name="Desc8">Descripción: Una gran obra del escritor colombiano Gabriel García Márquez. Según el diario le Monde (1999), se trata del libro en castellano más traducido y leído. De hecho, este diario lo colocó en el puesto 33 de los 100 mejores libros del siglo.</string>
    <string name="Desc9">Descripción: Una gran obra de Daniel Goleman que ha influenciado a miles de psicólogos, pues la inteligencia emocional es un concepto que está ampliamente relacionado con el bienestar y la felicidad de los individuos.</string>
    <string name="Desc10">Descripción: Esta obra fue publicada en 1945. Trata sobre la vida de un adolescente de Nueva York, Holden Cauldfiel, que se enfrenta a la realidad de la postguerra. Su confesión revela la vida de un joven que tiene que enfrentarse al fracaso escolar, a las normas rígidas de la familia tradicional y a la experiencia de las relaciones íntimas. Imprescindible leer este clásico de J. D. Salinger.</string>
    <string name="EjemploDesc">Descripcion de ejemplo</string>
    <string name="TituloEjemplo">Titulo de ejemplo</string>
    <string name="AutorEjemplo">Autor de ejemplo</string>
</resources>
