<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <Button
        android:id="@+id/btnSingup"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/uvg_primary_0"
        android:text="@string/Signup"
        android:textColor="@color/white"
        app:backgroundTint="@color/uvg_primary_0"
        app:icon="@drawable/ic_add_user"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <EditText
        android:id="@+id/txtSignupSecondNameUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signupsecondnameuser"
        android:inputType="textPersonName"
        android:textColorHint="@color/uvg_primary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignupFirstNameUser"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/txtSigupPasswordUserReforced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signuppassworduserreforced"
        android:inputType="textPassword"
        android:textColorHint="@color/uvg_primary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignupPasswordUser"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/txtSigunEmailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signupemailuser"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/uvg_primary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/txtSignupPasswordUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/signuppassworduser"
        android:inputType="textPassword"
        android:textColorHint="@color/uvg_primary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSigunEmailUser"
        app:layout_constraintVertical_bias="0.002" />

    <EditText
        android:id="@+id/txtSignupFirstNameUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signupfirstnameuser"
        android:inputType="textPersonName"
        android:textColorHint="@color/uvg_primary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSigupPasswordUserReforced"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/txtPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingrese el pin de confirmacion"
        android:inputType="textPassword"
        android:textColorHint="@color/uvg_primary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <Button
        android:id="@+id/btnconfirmarcuenta"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/uvg_primary_0"
        android:gravity="center"
        android:text="Confirmar Cuenta"
        android:textColor="@color/white"
        app:backgroundTint="@color/uvg_primary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

    <Button
        android:id="@+id/btnReenviar"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/uvg_primary_0"
        android:gravity="center"
        android:text="Reenviar PIN"
        android:textColor="@color/white"
        app:backgroundTint="@color/uvg_primary_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

</androidx.constraintlayout.widget.ConstraintLayout>